2006-07-08  Raivis Dejus  <orvils@gmail.com>

        * configure.in: Added "lv" (Latvian) to ALL_LINGUAS.
        * po/lv.po: Added Latvian Translation.

2006-06-15  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Changed 'n' to be of type
	ssize_t rather than size_t so that we can properly catch '-1'
	return values. Still for bug #179566.

2006-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* camel/camel-stub-marshal.c (do_read): Patch to my last
	patch. Oops, camel_read() doesn't guarantee that it will read 'n'
	requested bytes (as camel_write() guarantees that it will write
	'n' bytes), it is just a cancellable read() implementation. This
	should fix bug #179566.

2006-05-29  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.6.2
	* NEWS : Updated

2006-05-12  Sankar P  <psankar@novell.com>

	* Committed on behalf of Patrick Ohly <patrick.ohly@intel.com> 
	* camel-stub.c: (stub_send_internal):
	Adds a NULL check before proceeding further
	
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fix #341229
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): Set the old object so 
	that it gets refreshed properly.

2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339561
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): check for modification of end times.
				   
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339827
	* calendar/e-cal-backend-exchange-calendar.c: (add_vevent),
	(get_changed_events), (create_object), (modify_object),
	(modify_object_with_href), (remove_object), (receive_objects),
	(book_resource), (discard_alarm):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(create_task_object), (modify_task_object), (receive_task_objects),
	(remove_task_object):
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_cache_sync_end),
	(e_cal_backend_exchange_cache_lock),